Fixed layout issue with fucking stupid dialog div

--- a/site/css/layouts/marketing.css
+++ b/site/css/layouts/marketing.css
@@ -45,6 +45,9 @@ label {
 .is-center {
     text-align: center;
 }
+.is-hidden {
+    display: none;
+}
 
 
 
@@ -146,7 +149,7 @@ a.pure-button-primary {
 .splash {
     /* absolute center .splash within .splash-container */
     width: 80%;
-    height: 50%;
+    height: 60%;
     margin: auto;
     position: absolute;
     top: 100px; left: 0; bottom: 0; right: 0;
